# sketches

./: .gitignore  Cargo.toml  README.md
examples/: angle_iter.rs  bounds.rs  chaikin_curve.rs  cliping.rs  collatz.rs  diffusion.rs  escher_tiling.rs  image_sampling.rs  line_cliping.rs  line_pattern.rs  neutrons_p2.rs  p_2_1_2_03.rs  pendulums.rs  periodic_edge.rs  perlin.rs  perlin_dist.rs  poison_sampling.rs  population.rs  rstar_packing.rs  template.rs  tight_packing.rs  vec3d.rs  watercolor.rs
examples/tic-tac-toe/: board.rs  board_display.rs  brain.rs  eval.rs  field.rs  main.rs  model.rs  player.rs
src/: main.rs
utils/camera/: Cargo.toml
utils/camera/src/: lib.rs
utils/rotation/: Cargo.toml
utils/rotation/src/: lib.rs
