[package]
name = "prosessing"
version = "0.1.0"
authors = ["komm <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = {git = "https://github.com/nannou-org/nannou.git", branch = "master"}
vulkano = "0.14.0"
nannou_laser = "0.3.0"
nannou_audio = "0.2.0"
nannou_osc = "0.1.0"
rand = "0.7.0"
# num = "0.2.0"
rstar = "0.5.1"
image = "0.22.2"
num-complex = "0.2.3"