[package]
name = "prosessing"
version = "0.1.0"
authors = ["komm <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = {git = "https://github.com/nannou-org/nannou.git", branch = "master"}
rand = "0.7.2"
rstar = "0.5.1"
num-complex = "0.2.3"
image = "0.22.3"


[workspace]
members = ["utils/camera", "utils/rotation"]